# tplatform

./: .gitignore  README.md  main.py  pyproject.toml
transcriber/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  app.py  requirements.txt
