[project]
name = "simple-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.15",
    "chalice>=1.32.0",
    "google-genai>=1.31.0",
    "groq>=0.31.0",
    "notion-client>=2.7.0",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "chalice>=1.32.0",
]
